First function to handle event / filter style counts unique to a specified feature.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,7 @@ S3method(check_table,default)
 export(calc_counts)
 export(calc_desc)
 export(calc_stats)
+export(event_count)
 export(summary_table)
 import(data.table)
+importFrom(rlang,parse_expr)
