--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,9 @@ export(calc_counts)
 export(calc_desc)
 export(calc_stats)
 export(event_count)
+export(merge_table_lists)
+export(multi_event_true)
 export(summary_table)
+export(total_events)
 import(data.table)
 importFrom(rlang,parse_expr)
