creating events by allowing for advanced splits of events.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(calc_counts)
 export(calc_desc)
 export(calc_stats)
 export(event_count)
+export(event_count_by)
 export(merge_table_lists)
 export(multi_event_true)
 export(summary_table)
