Adding a summary table by function to perform analysis on multiple row groupings, e.g. for lab visits

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(event_count_by)
 export(merge_table_lists)
 export(multi_event_true)
 export(summary_table)
+export(summary_table_by)
 export(total_events)
 import(data.table)
 importFrom(rlang,parse_expr)
