--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,3 +12,7 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
 Imports: 
     data.table
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
