--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,15 +4,24 @@ Version: 0.0.0.9000
 Authors@R: 
     person("Max", "Ebenezer-Brown", , "max.ebenezer-brown@ascent.io", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: This package main function is to create pharmacutical tables, listing and graphs at high performance by using data.table as a backend.
+Description: This package main function is to create pharmacutical tables,
+    listing and graphs at high performance by using data.table as a
+    backend.
 License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
     license
+Imports: 
+    data.table,
+    rlang
+Suggests: 
+    dplyr,
+    knitr,
+    random.cdisc.data,
+    rmarkdown,
+    tern
+VignetteBuilder: 
+    knitr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
-Imports: 
-    data.table
-Suggests: 
-    knitr,
-    rmarkdown
-VignetteBuilder: knitr
+Depends: 
+    R (>= 2.10)
