Adding function which allows creation of labs and change from baseline tables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(merge_table_lists)
 export(multi_event_true)
 export(summary_table)
 export(summary_table_by)
+export(summary_table_by_targets)
 export(total_events)
 import(data.table)
 importFrom(rlang,parse_expr)
