Updating packages in description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,8 @@ Suggests:
     knitr,
     random.cdisc.data,
     rmarkdown,
-    tern
+    tern,
+    kableExtra
 VignetteBuilder: 
     knitr
 Encoding: UTF-8
