--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,10 @@ export(calc_desc)
 export(calc_stats)
 export(event_count)
 export(event_count_by)
+export(indent)
 export(merge_table_lists)
 export(multi_event_true)
+export(nbsp)
 export(summary_table)
 export(summary_table_by)
 export(summary_table_by_targets)
