Add rounding routines
Added `round_sum()` and `round_pct()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ export(indent)
 export(merge_table_lists)
 export(multi_event_true)
 export(nbsp)
+export(round_pct)
+export(round_sum)
 export(summary_table)
 export(summary_table_by)
 export(summary_table_by_targets)
