--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(calc_desc)
 export(calc_stats)
 export(event_count)
 export(event_count_by)
+export(format_n_pct)
 export(indent)
 export(merge_table_lists)
 export(multi_event_true)
