--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -55,4 +55,4 @@ Config/Needs/website: rmarkdown
 LazyData: true
 Remotes: 
     ascentsoftware/dtlg.data
-URL: https://ascentsoftware.github.io/dtlg/
+URL: https://AscentSoftware.github.io/dtlg
