--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(label)
 export(merge_table_lists)
 export(multi_event_true)
 export(nbsp)
+export(print_dtlg)
 export(round_pct)
 export(round_sum)
 export(summary_table)
