--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,7 +51,7 @@ RoxygenNote: 7.3.2
 Depends: 
     R (>= 4.1.0)
 Config/testthat/edition: 3
-Config/Needs/website: rmarkdown
+Config/Needs/website: rmarkdown, ascentsoftware/ascentdown
 LazyData: true
 Remotes: 
     ascentsoftware/dtlg.data
