--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,7 +44,8 @@ Suggests:
     bench,
     tidyr,
     rtables,
-    dtlg.data (>= 0.1.9000)
+    dtlg.data (>= 0.1.9000),
+    withr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
