--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,17 +12,20 @@ export(calc_counts)
 export(calc_desc)
 export(calc_stats)
 export(cross_tab_to_obsv_tab)
+export(dt_copy_semantics)
 export(event_count)
 export(event_count_by)
 export(format_n_pct)
 export(indent)
 export(label)
+export(maybe_copy_dt)
 export(merge_table_lists)
 export(multi_event_true)
 export(nbsp)
 export(print_dtlg)
 export(round_pct)
 export(round_sum)
+export(set_dt_copy_semantics)
 export(summary_table)
 export(summary_table_by)
 export(summary_table_by_targets)
