--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -51,6 +51,8 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.2
 Depends: 
     R (>= 4.1.0)
+Remotes: 
+  ascentsoftware/dtlg.data
 Config/testthat/edition: 3
 Config/Needs/website: rmarkdown, ascentsoftware/ascentdown
 LazyData: true
