--- a/.github/workflows/rhub.yaml
+++ b/.github/workflows/rhub.yaml
@@ -81,6 +81,7 @@ jobs:
         with:
           job-config: ${{ matrix.config.job-config }}
           token: ${{ secrets.RHUB_TOKEN }}
+          extra-repositories: https://ascentsoftware.r-universe.dev
       - uses: r-hub/actions/platform-info@v1
         with:
           token: ${{ secrets.RHUB_TOKEN }}
