--- a/.github/workflows/rhub.yaml
+++ b/.github/workflows/rhub.yaml
@@ -86,11 +86,14 @@ jobs:
         with:
           token: ${{ secrets.RHUB_TOKEN }}
           job-config: ${{ matrix.config.job-config }}
+          extra-repositories: https://ascentsoftware.r-universe.dev
       - uses: r-hub/actions/setup-deps@v1
         with:
           job-config: ${{ matrix.config.job-config }}
           token: ${{ secrets.RHUB_TOKEN }}
+          extra-repositories: https://ascentsoftware.r-universe.dev
       - uses: r-hub/actions/run-check@v1
         with:
           job-config: ${{ matrix.config.job-config }}
           token: ${{ secrets.RHUB_TOKEN }}
+          extra-repositories: https://ascentsoftware.r-universe.dev
