--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -52,6 +52,7 @@ Depends:
     R (>= 4.1.0)
 Config/testthat/edition: 3
 Config/Needs/website: rmarkdown, ascentsoftware/ascentdown
+Config/Needs/check: ascentsoftware/dtlg.data
 LazyData: true
 URL: https://AscentSoftware.github.io/dtlg/
 Additional_repositories: https://ascentsoftware.r-universe.dev
