--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,7 +28,14 @@ Authors@R: c(
         role = c("aut", "cre")
         )
     )
-Description: Create pharmaceutical tables by using data.table as backend.
+Description: Create high-performance clinical reporting tables (TLGs) from
+    ADaM-like inputs. The package provides a consistent, programmatic API
+    to generate common tables such as demographics, adverse event incidence,
+    and laboratory summaries, using 'data.table' for fast aggregation over
+    large populations. Functions support flexible target-variable selection,
+    stratification by treatment, and customizable summary statistics, and
+    return tidy, machine-readable results ready to render with downstream
+    table/formatting packages in analysis pipelines.
 License: MIT + file LICENSE
 Imports: 
     data.table,
