--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -54,6 +54,7 @@ jobs:
 
       - name: Code Coverage Report
         uses: irongut/CodeCoverageSummary@v1.3.0
+        continue-on-error: true
         with:
           filename: cobertura.xml
           badge: true
@@ -66,7 +67,7 @@ jobs:
 
       - name: Add Coverage PR Comment
         uses: marocchino/sticky-pull-request-comment@v2
-        if: always() && github.event_name == 'pull_request'
+        if: github.event_name == 'pull_request'
         with:
           recreate: true
           path: code-coverage-results.md
