Typo :clown_face:

--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -54,5 +54,5 @@ jobs:
       - name: Code Coverage Report
         uses: 5monkeys/cobertura-action@master
         with:
-          path: covertura.xml
+          path: cobertura.xml
           minimum_coverage: 60
