--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -9,8 +9,8 @@ name: dtlg Package Coverage
 
 permissions:
   contents: read
-  issues: write
   pull-requests: write
+  checks: write
 
 jobs:
   coverage:
